Kitchensync - - Update annoying style - that will work on iPhone correctly

--- a/apps/kitchensink/main.css
+++ b/apps/kitchensink/main.css
@@ -61,6 +61,11 @@
   top: 4rem !important;
 }
 
+#main {
+  min-block-size: 100vh;
+  min-block-size: 100lvh;
+}
+
 #settings-aside {
   max-width: 20rem;
 }
